# SlideYesod

./: README.md
1-ola-mundo/: client_session_key.aes  olamundo.cabal  olamundo.hs
1-ola-mundo/.stack-work/install/x86_64-osx/lts-3.9/7.10.2/flag-cache/: olamundo-0.0.0
2-eco/: client_session_key.aes  eco.cabal  eco.hs
3-formulario/: client_session_key.aes  formulario.cabal  formulario.hs
3-formulario/.stack-work/install/x86_64-osx/lts-3.9/7.10.2/flag-cache/: formulario-0.0.0
4-shakespear/: client_session_key.aes  shakespear.cabal  shakespear.hs
4-shakespear/.stack-work/install/x86_64-osx/lts-3.9/7.10.2/flag-cache/: shakespear-0.0.0
4-shakespear/templates/: client_session_key.aes  default-base.hamlet  default.hamlet  home.cassius  home.julius  home.lucius
apresentacao/: index.html
