name:               olamundo
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          olamundo
  main-is:          olamundo.hs

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core

  ghc-options: -ddump-splices
